--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,6 @@ knitr::opts_chunk$set(
 
 ## **Description**
 
-
 In Natural Language Processing, it is common for users to try and engineer their own features from a given text. It can be difficult to extract certain features from text without using additional R tools. This R package includes functions that allows data scientists to extract information from text features which can be useful for feature engineering, or in other data science projects. Our package, textfeatureinfor, will help gather summary information from plain text such as the number of punctuations in the text, the average word lengths and the percentage of fully capitalised words which can be useful information for feature engineering. Additionally, our package can also manipulate text data by removing the stopwords for the ease of future processing steps. 
 
 Our package and functions are inspired from a lab in the course, DSCI 573 (Feature and model selection), of UBC MDS program, and are tailored based on our own experience and interest. 
@@ -31,10 +30,12 @@ Our package and functions are inspired from a lab in the course, DSCI 573 (Featu
 
 ## **R Ecosystem**
 
+In the field of text feature engineering, we are cognisant that there are well established packages in the R ecosystem - specifically [`textfeatures`](https://github.com/mkearney/textfeatures), [`qdap`](http://trinker.github.io/qdap/) and [`stopwords`](https://github.com/quanteda/stopwords). For punctuations, we are aware that textfeatures package can be used to find the number of punctuations in a string. To calculate average word length, both textfeatures and qdap are able to find the count of words but they do not provide the average length. To count the number of fully capitalised words in a text, textfeatures provides a means to find the number of capitalized characters, but not to count them explicitly. In the case of stopwords, the package stopwords provides the list of stopwords in different languages. However, it does not have a function to remove stopwords from the text. 
+
+Based on our experience in our previous module, all the functions that we seek to use require several lines of code. For example, to calculate the average word length, we need to extract the punctuation, count total number of characters, then averaging out over the number of words present. As such, we seek to simplify these tasks into functions that users, including ourselves, can employ in one line of code.
+
 <!-- badges: start -->
 <!-- badges: end -->
-
-The goal of textfeatureinfor is to ...
 
 ## Installation
 
@@ -53,19 +54,3 @@ This is a basic example which shows you how to solve a common problem:
 library(textfeatureinfor)
 ## basic example code
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
