--- a/vignettes/avg_word_len.Rmd
+++ b/vignettes/avg_word_len.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ## Background
-___
+
 
 During Natural Language Processing (NLP), data scientists may want:
 - extract additional characteristics from text data
@@ -32,7 +32,7 @@ library(textfeatureinfor)
 ```
 
 ## Quick example for one piece of text
-___
+
 
 To understand the basics of the `avg_word_len` function, we can take a look at it's interaction with a simple text object. 
 
@@ -42,8 +42,10 @@ text <- "Star wars is my favourite movie"
 round(avg_word_len(text), 2) # the output of avg_word_len is rounded to 2 decimals
 ```
 
+From this basic example, we can see that the average length of words in this piece of text is `4.33`.
+
 ## Example with a dataframe
-___
+
 
 Now that we understand how to use this function, let's apply `avg_word_len` to an entire data set. This is more practical aspect of this function considering that feature extraction will need to be done for entire data-frames in order to be useful for machine learning models.
 
@@ -74,7 +76,7 @@ toy_data
 Now we have access to the average length of the words for each example message in the toy data frame.
 
 ## Summary
-___
+
 
 The `avg_word_len` function is simple, but has broach implications. It allows for easier extraction of useful text information in one line of code. This feature is useful for natural language processing and may prove useful when building machine learning models.
 
