--- a/vignettes/avg_word_len.Rmd
+++ b/vignettes/avg_word_len.Rmd
@@ -31,7 +31,7 @@ You can start by loading the `textfeatureinfo` package:
 library(textfeatureinfor)
 ```
 
-## Quick example for one piece of text
+## Quick example with one piece of text
 
 
 To understand the basics of the `avg_word_len` function, we can take a look at it's interaction with a simple text object. 
