--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,7 @@ In the field of text feature engineering, we are cognisant that there are well e
 Based on our experience in our previous module, all the functions that we seek to use require several lines of code. For example, to calculate the average word length, we need to extract the punctuation, count total number of characters, then averaging out over the number of words present. As such, we seek to simplify these tasks into functions that users, including ourselves, can employ in one line of code.
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/UBC-MDS/textfeatureinfor/workflows/R-CMD-check/badge.svg)](https://github.com/UBC-MDS/textfeatureinfor/actions)
 <!-- badges: end -->
 
 ## Installation
