--- a/vignettes/count_punc.Rmd
+++ b/vignettes/count_punc.Rmd
@@ -22,7 +22,7 @@ During Natural Language Processing (NLP), data scientists may want:
 - engineer their own features using these additional characteristics 
 - train their models with their engineered features for better model results
 
-The `count_punc` function from the `textfeatureinfo` package is one of four functions that aids in this text data extraction process. Specifically, `count_punc` makes it easy to extract the number of punctuation inside of a piece of text.
+The `count_punc` function from the `textfeatureinfo` package is one of four functions that aids in this text data extraction process. Specifically, `count_punc` makes it easy to extract the number of punctuation inside a piece of text.
 
 This document provides detailed instructions on how to apply the `count_punc` function on text data for quick access to a new feature that can be added into various machine learning models.
 
