--- a/vignettes/avg_word_len.Rmd
+++ b/vignettes/avg_word_len.Rmd
@@ -34,7 +34,7 @@ library(textfeatureinfor)
 ## Quick example with one piece of text
 
 
-To understand the basics of the `avg_word_len` function, we can take a look at it's interaction with a simple text object. 
+To understand the basics of the `avg_word_len` function, we can take a look at its interaction with a simple text object. 
 
 ```{r}
 text <- "Star wars is my favourite movie"
