--- a/vignettes/remove_stop_words.Rmd
+++ b/vignettes/remove_stop_words.Rmd
@@ -12,7 +12,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(tidyverse)
+library(dplyr)
+library(tidyr)
 ```
 
 ## Background
