--- a/vignettes/perc_cap_words.Rmd
+++ b/vignettes/perc_cap_words.Rmd
@@ -2,7 +2,7 @@
 title: "Introduction to perc_cap_words"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{perc_cap_words}
+  %\VignetteIndexEntry{Introduction to perc_cap_words}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
